--- a/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
+++ b/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
@@ -12,13 +12,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianTableViewCell" customModule="MyMonee_Final" customModuleProvider="target">
-            <connections>
-                <outlet property="amount" destination="X2S-dm-EIX" id="W3K-ac-IZS"/>
-                <outlet property="progress" destination="dJd-NX-95m" id="eMl-cW-CL9"/>
-                <outlet property="title" destination="fc2-vV-qzx" id="RPe-GO-0g3"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianTableViewCell" customModule="MyMonee_Final" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ImpianTableViewCell" customModule="MyMonee_Final" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="342" height="82"/>
@@ -76,6 +70,11 @@
                     <integer key="value" value="4"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="amount" destination="X2S-dm-EIX" id="ZQK-M2-ajn"/>
+                <outlet property="progress" destination="dJd-NX-95m" id="ygV-Ia-dX9"/>
+                <outlet property="title" destination="fc2-vV-qzx" id="qOC-Db-3J2"/>
+            </connections>
             <point key="canvasLocation" x="139" y="85"/>
         </tableViewCell>
     </objects>
