--- a/MyMonee-Final/Views/ImpianDetailViewController.xib
+++ b/MyMonee-Final/Views/ImpianDetailViewController.xib
@@ -8,6 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Poppins-Medium.ttf">
+            <string>Poppins-Medium</string>
+        </array>
         <array key="Poppins-Regular.ttf">
             <string>Poppins-Regular</string>
         </array>
@@ -18,8 +21,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianDetailViewController" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
-                <outlet property="backButton" destination="7Wo-PQ-us0" id="kdR-Xx-s4R"/>
+                <outlet property="amountImpian" destination="ouf-ms-HQX" id="e5J-y0-322"/>
+                <outlet property="backButton" destination="7Wo-PQ-us0" id="mXE-jc-ua4"/>
                 <outlet property="confirmationButton" destination="cTg-V8-xzQ" id="4bU-9z-PVm"/>
+                <outlet property="persantase" destination="Nlj-iW-IM6" id="i06-bA-TaG"/>
+                <outlet property="priceImpian" destination="hwG-B5-qnz" id="wVS-1s-qUj"/>
+                <outlet property="progressBar" destination="DUJ-3p-dpu" id="Iuf-lD-rjO"/>
+                <outlet property="titleImpian" destination="bBg-gk-pqI" id="eMU-jV-z0A"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -46,26 +54,24 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="&lt;price&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwG-B5-qnz">
                             <rect key="frame" x="162" y="110" width="90" height="34"/>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Wo-PQ-us0">
-                            <rect key="frame" x="20" y="686" width="374" height="32"/>
+                            <rect key="frame" x="20" y="686" width="374" height="43"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="43" id="k0R-uS-3Nb"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
                             <state key="normal" title="Kembali">
                                 <color key="titleColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                             </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTg-V8-xzQ">
-                            <rect key="frame" x="20" y="638" width="374" height="32"/>
-                            <color key="backgroundColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
-                            <state key="normal" title="Konfirmasi Tercapai">
-                                <color key="titleColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
-                            </state>
+                            <connections>
+                                <action selector="backTapped:" destination="-1" eventType="touchUpInside" id="5Uw-dd-ECd"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pwv-qi-u5A">
-                            <rect key="frame" x="20" y="247" width="374" height="66"/>
+                            <rect key="frame" x="20" y="246" width="374" height="66"/>
                             <subviews>
                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DUJ-3p-dpu">
                                     <rect key="frame" x="13" y="22" width="348" height="4"/>
@@ -73,8 +79,8 @@
                                 </progressView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;amount&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouf-ms-HQX">
                                     <rect key="frame" x="13" y="37" width="348" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
+                                    <color key="textColor" red="0.74117647058823533" green="0.74117647058823533" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -92,17 +98,31 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress Capaian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skK-TQ-eKz">
-                            <rect key="frame" x="20" y="209" width="134" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="20" y="209" width="126.5" height="20"/>
+                            <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
+                            <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;int&gt;%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nlj-iW-IM6">
-                            <rect key="frame" x="339" y="209" width="55" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="350.5" y="209" width="43.5" height="20"/>
+                            <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
+                            <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTg-V8-xzQ">
+                            <rect key="frame" x="20" y="627" width="374" height="43"/>
+                            <color key="backgroundColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="43" id="0Us-DH-jxG"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
+                            <state key="normal" title="Konfirmasi Tercapai">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="confirmationTapped:" destination="-1" eventType="touchUpInside" id="cVW-qR-GOn"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
@@ -110,22 +130,25 @@
                         <constraint firstItem="Pwv-qi-u5A" firstAttribute="leading" secondItem="skK-TQ-eKz" secondAttribute="leading" id="4FG-78-XTi"/>
                         <constraint firstItem="7Wo-PQ-us0" firstAttribute="top" secondItem="cTg-V8-xzQ" secondAttribute="bottom" constant="16" id="4Ti-7z-I82"/>
                         <constraint firstAttribute="trailing" secondItem="7Wo-PQ-us0" secondAttribute="trailing" constant="20" id="5ti-8b-kL7"/>
+                        <constraint firstItem="skK-TQ-eKz" firstAttribute="top" secondItem="hwG-B5-qnz" secondAttribute="bottom" constant="65" id="Blg-xb-gm1"/>
                         <constraint firstAttribute="trailing" secondItem="Pwv-qi-u5A" secondAttribute="trailing" constant="20" id="HbK-LH-6wv"/>
                         <constraint firstAttribute="trailing" secondItem="bBg-gk-pqI" secondAttribute="trailing" constant="17" id="ICn-Qn-yFC"/>
                         <constraint firstItem="Pwv-qi-u5A" firstAttribute="top" secondItem="Nlj-iW-IM6" secondAttribute="bottom" constant="17" id="KaT-MZ-I4f"/>
                         <constraint firstItem="Pwv-qi-u5A" firstAttribute="leading" secondItem="21Y-jQ-N2P" secondAttribute="leading" constant="20" id="Oy6-pO-mGV"/>
                         <constraint firstAttribute="trailing" secondItem="cTg-V8-xzQ" secondAttribute="trailing" constant="20" id="Qft-bG-PXK"/>
                         <constraint firstItem="cTg-V8-xzQ" firstAttribute="leading" secondItem="21Y-jQ-N2P" secondAttribute="leading" constant="20" id="Qnq-KH-nxh"/>
+                        <constraint firstAttribute="bottom" secondItem="7Wo-PQ-us0" secondAttribute="bottom" constant="47.5" id="Qv8-T2-maE"/>
                         <constraint firstItem="hwG-B5-qnz" firstAttribute="centerX" secondItem="EvZ-84-QyX" secondAttribute="centerX" id="WcW-nI-Wbv"/>
                         <constraint firstItem="Pwv-qi-u5A" firstAttribute="top" secondItem="skK-TQ-eKz" secondAttribute="bottom" constant="17" id="fdD-te-9cZ"/>
                         <constraint firstItem="7Wo-PQ-us0" firstAttribute="leading" secondItem="21Y-jQ-N2P" secondAttribute="leading" constant="20" id="hQ2-Tg-LBH"/>
+                        <constraint firstItem="Nlj-iW-IM6" firstAttribute="trailing" secondItem="Pwv-qi-u5A" secondAttribute="trailing" id="i3y-GO-jn5"/>
+                        <constraint firstItem="cTg-V8-xzQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Pwv-qi-u5A" secondAttribute="bottom" constant="50" id="iFK-5c-rfo"/>
                         <constraint firstItem="EvZ-84-QyX" firstAttribute="centerX" secondItem="bBg-gk-pqI" secondAttribute="centerX" id="lQr-Iq-opg"/>
-                        <constraint firstItem="Pwv-qi-u5A" firstAttribute="top" secondItem="hwG-B5-qnz" secondAttribute="bottom" constant="103" id="nJ2-xk-pD2"/>
+                        <constraint firstItem="Nlj-iW-IM6" firstAttribute="top" secondItem="skK-TQ-eKz" secondAttribute="top" id="nng-Qs-2tN"/>
                         <constraint firstItem="bBg-gk-pqI" firstAttribute="top" secondItem="21Y-jQ-N2P" secondAttribute="top" constant="55" id="pHZ-Gm-Zac"/>
                         <constraint firstItem="bBg-gk-pqI" firstAttribute="leading" secondItem="21Y-jQ-N2P" secondAttribute="leading" constant="17" id="ptK-1C-rSk"/>
                         <constraint firstItem="hwG-B5-qnz" firstAttribute="top" secondItem="EvZ-84-QyX" secondAttribute="bottom" constant="8" id="qsZ-XH-R6H"/>
                         <constraint firstItem="Nlj-iW-IM6" firstAttribute="trailing" secondItem="Pwv-qi-u5A" secondAttribute="trailing" id="wN2-qQ-LwW"/>
-                        <constraint firstItem="cTg-V8-xzQ" firstAttribute="top" secondItem="Pwv-qi-u5A" secondAttribute="bottom" constant="325" id="zCe-xa-gt4"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -133,12 +156,15 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWm-75-WK5">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWm-75-WK5" userLabel="Edit Button">
                     <rect key="frame" x="361" y="60.5" width="36" height="36"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="JWm-75-WK5" secondAttribute="height" multiplier="1:1" id="jwN-c4-0hS"/>
                     </constraints>
                     <state key="normal" image="Update"/>
+                    <connections>
+                        <action selector="edit:" destination="-1" eventType="touchUpInside" id="I7x-L9-Wtv"/>
+                    </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Love_Border" translatesAutoresizingMaskIntoConstraints="NO" id="F6H-Bj-tbj">
                     <rect key="frame" x="178" y="93" width="58" height="57.5"/>
